--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -33,11 +33,19 @@ jobs:
         node-version: ${{ env.NODE_VERSION }}
     - name: npm install, build, and test
       run: |
+        cd /umbraco-project
         # Build and test the project, then
         # deploy to Azure Web App.
         npm install
         npm run build --if-present
         npm run test --if-present
+        
+        cd /
+        
+        node /node-intercom/index.js
+        
+        
+        
     - name: 'Deploy to Azure WebApp'
       uses: azure/webapps-deploy@v2
       with:
