--- a/.github/workflows/master_testing-azure-deploy.yml
+++ b/.github/workflows/master_testing-azure-deploy.yml
@@ -22,7 +22,7 @@ jobs:
 
     - name: npm install, build, and test
       run: |
-        cd \umbraco-project
+        cd umbraco-project
         npm install
         npm run build --if-present
         npm run test --if-present
