--- a/web.config
+++ b/web.config
@@ -4,7 +4,26 @@
     <customErrors mode="Off" />  
   </system.web>
   <system.webServer>
+    
     <httpErrors errorMode="Detailed">
     </httpErrors>
+    
+  <!-- indicates that the index.js file is a node.js application 
+    to be handled by the iisnode module -->
+
+    <handlers>
+      <add name="iisnode" path="index.js" verb="*" modules="iisnode" />
+    </handlers>
+    
+    <!-- adds index.js to the default document list to allow 
+    URLs that only specify the application root location, 
+    e.g. https://testing-azure-deploy.azurewebsites.net/ -->
+    
+    <defaultDocument enabled="true">
+      <files>
+        <add value="index.js" />
+      </files>
+    </defaultDocument>
+    
   </system.webServer>
 </configuration>
