--- a/web.config
+++ b/web.config
@@ -1,29 +1,17 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <system.web>
-    <customErrors mode="Off" />  
+    
+    <customErrors mode="Off" /> 
+    
   </system.web>
+  
   <system.webServer>
     
     <httpErrors errorMode="Detailed">
     </httpErrors>
     
-  <!-- indicates that the index.js file is a node.js application 
-    to be handled by the iisnode module -->
-
-    <handlers>
-      <add name="iisnode" path="index.js" verb="*" modules="iisnode" />
-    </handlers>
-    
-    <!-- adds index.js to the default document list to allow 
-    URLs that only specify the application root location, 
-    e.g. https://testing-azure-deploy.azurewebsites.net/ -->
-    
-    <defaultDocument enabled="true">
-      <files>
-        <add value="index.js" />
-      </files>
-    </defaultDocument>
+    <directoryBrowse enabled="true" showFlags="Date,Time,Extension,Size" />
     
   </system.webServer>
 </configuration>
