--- a/.github/workflows/master_testing-azure-deploy.yml
+++ b/.github/workflows/master_testing-azure-deploy.yml
@@ -40,6 +40,7 @@ jobs:
       runs-on: windows-latest
 
     steps:
+      uses: actions/checkout@master
     - task: DeleteFiles@1
       displayName: 'Remove unneeded files'
       inputs:
