testing the new distribution folder path

--- a/web.config
+++ b/web.config
@@ -1,16 +1,19 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <system.web>
-    
+
+    <!--Disable custom errors-->
     <customErrors mode="Off" /> 
     
   </system.web>
   
   <system.webServer>
-    
+  
+    <!--Enable detailed errors-->
     <httpErrors errorMode="Detailed">
     </httpErrors>
-    
+
+    <!--Enable directory browsing-->
     <directoryBrowse enabled="true" showFlags="Date,Time,Extension,Size" />
     
   </system.webServer>
