--- a/.github/workflows/master_testing-azure-deploy.yml
+++ b/.github/workflows/master_testing-azure-deploy.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy Node.js app to Azure Web App - testing-azure-deploy
 
 on:
@@ -33,20 +30,4 @@ jobs:
         app-name: 'testing-azure-deploy'
         slot-name: 'production'
         publish-profile: ${{ secrets.AzureAppService_PublishProfile_8a4341e0e34748c58a07e54266a615ed }}
-        package: '.'
-        
-    delete-files: 
-      needs: build-and-deploy
-      runs-on: windows-latest
-
-    steps:
-      uses: actions/checkout@master
-    - task: DeleteFiles@1
-      displayName: 'Remove unneeded files'
-      inputs:
-        contents: |
-          index*
-          **/css/*
-          **/fonts/*
-          **/img/*
-          **/js/*
+        package: .
